# todo-notes-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.blocks/: config.json
.hosting/static/: index.html
.hosting/static/assets/: index-ASF-WB67.css  index-BxZhfLMD.js  index-CUV6KJ1W.js
agentcore/: agent.py  gateway.py  memory.py  pyproject.toml  run_local.sh  smoke.py
aws-blocks/: index.cdk.ts  index.ts
aws-blocks/scripts/: sandbox.ts  server.ts
docs/: approach.md  architecture.md  assistant.md  blog-post.md  deployment.md  development.md  localstack.md  pricing-and-cleanup.md  security.md
docs/wiki/: Destroy-and-Cleanup.md  Evaluation-Checklist.md  Home.md  Implement-in-AWS.md  Pricing.md
knowledge/: faq.md  getting-started.md
scripts/: fix-localstack-gsis.py  generate-client.mjs  localstack.sh  screenshots.mjs  seed-demo.mjs
src/: index.ts  main.ts
src/domain/: notes.ts
src/styles/: app.css
test/: domain.test.ts  e2e.test.ts
